<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_basket"
            android:title="@string/menu"/>

        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_cart"
            android:title="@string/basket"/>

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders"/>

    </group>
</menu>