<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Изменить статус"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/got"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGot"
        android:text="@string/order_got" />

    <Button
        android:id="@+id/processed"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorCooking"
        android:text="@string/order_is_being_cooked" />
    <Button
        android:id="@+id/cooked"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/order_cooked"
        android:background="@color/colorCooked"/>
    <Button
        android:id="@+id/cancelled"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/order_cancelled"
        android:background="@color/colorCancelled"/>
    <Button
        android:id="@+id/cancel"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Назад"
        />

</LinearLayout>