<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="20"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_Order"
            android:layout_width="69dp"
            android:layout_height="26dp"
            android:layout_marginTop="60dp"
            android:text="@string/order"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09"
            android:layout_weight="1"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Order"/>

        <ListView
            android:id="@+id/listview_food"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            android:layout_weight="4"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:id="@+id/cart_delivery_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/delivery"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listview_food"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/deliveryPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0 \u20BD"
                android:textAlignment="gravity"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@string/total"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/cfPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0 \u20BD"
                android:textSize="17dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/delivery_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/use_your_address"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentary"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/commentary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/leave_a_commentary"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:padding="5dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <Spinner
            android:layout_marginTop="5dp"
            android:id="@+id/payment_spinner"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@drawable/layout_bg"
            android:textColor="@android:color/darker_gray"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="Заказать"
            android:textColor="@color/colorItemname"
            android:textSize="18dp" />

    </LinearLayout>



</ScrollView>